--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Static Site CI/CD
 
 on:
   push:
@@ -11,30 +11,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Run linting
+    # Optional: Lint HTML, CSS, JS if config files exist
+    - name: Lint HTML
       run: |
-        npm install -g htmlhint
-        htmlhint "**/*.html"
-        npm install -g stylelint
-        stylelint "**/*.css"
-        npm install -g eslint
-        eslint "**/*.js"
+        npx htmlhint "**/*.html" || true
 
-    - name: Build
+    - name: Lint CSS
       run: |
-        echo "Building project..."
-        # Add build steps if needed
+        npx stylelint "**/*.css" || true
 
+    - name: Lint JS
+      run: |
+        npx eslint "**/*.js" || true
+
+    # Deploy to GitHub Pages (only on main)
     - name: Deploy to GitHub Pages
       if: github.ref == 'refs/heads/main'
       uses: peaceiris/actions-gh-pages@v3
